--- a/spec/src/main/asciidoc/xml-binding-spec.adoc
+++ b/spec/src/main/asciidoc/xml-binding-spec.adoc
@@ -1,5 +1,5 @@
 //
-// Copyright (c) 2017, 2019 Contributors to the Eclipse Foundation
+// Copyright (c) 2017, 2020 Contributors to the Eclipse Foundation
 //
 
 = Jakarta XML Binding
@@ -25,4 +25,4 @@ include::license-efsl.adoc[]
 
 // == Jakarta XML Binding
 :sectnums:
-include::jakarta.xml.bind.adoc[]
+include::xml-binding.adoc[]
