--- a/spec/src/main/asciidoc/xml-binding.adoc
+++ b/spec/src/main/asciidoc/xml-binding.adoc
@@ -1,3 +1,6 @@
+//
+// Copyright (c) 2017, 2020 Contributors to the Eclipse Foundation
+//
 == Introduction
 
 The Jakarta XML Binding provides an API and tools that automate the mapping
